--- a/index.html
+++ b/index.html
@@ -1,3 +1,52 @@
-<div> CIAO </div>
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ludwig Favre Style</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <h1>Ludwig Favre</h1>
+    <nav>
+      <ul>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-<p> a quanto pare funziona</p>
+  <section id="portfolio">
+    <div class="grid">
+      <div class="grid-item">
+        <img src="image1.jpg" alt="Project 1">
+        <p>Project 1</p>
+      </div>
+      <div class="grid-item">
+        <img src="image2.jpg" alt="Project 2">
+        <p>Project 2</p>
+      </div>
+      <div class="grid-item">
+        <img src="image3.jpg" alt="Project 3">
+        <p>Project 3</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vel purus at libero tincidunt tincidunt.</p>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: info@ludwigfavre.com</p>
+  </section>
+
+  <footer>
+    <p>&copy; 2023 Ludwig Favre</p>
+  </footer>
+</body>
+</html>
