--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <section id="portfolio">
     <div class="grid">
       <div class="grid-item">
-        <img src="image1.jpg" alt="Project 1">
+        <img src="gif.gif" alt="gif" />
         <p>Project 1</p>
       </div>
       <div class="grid-item">
