--- a/index.html
+++ b/index.html
@@ -20,17 +20,35 @@
 
   <section id="portfolio">
     <div class="grid">
+      <!-- Immagine 1 da Unsplash -->
       <div class="grid-item">
-        <img src="gif.gif" alt="gif" />
-        <p>Project 1</p>
+        <img src="https://source.unsplash.com/600x400/?nature,forest" alt="Nature">
+        <p>Nature</p>
       </div>
+      <!-- Immagine 2 da Unsplash -->
       <div class="grid-item">
-        <img src="image2.jpg" alt="Project 2">
-        <p>Project 2</p>
+        <img src="https://source.unsplash.com/600x400/?city,night" alt="City">
+        <p>City</p>
       </div>
+      <!-- Immagine 3 da Unsplash -->
       <div class="grid-item">
-        <img src="image3.jpg" alt="Project 3">
-        <p>Project 3</p>
+        <img src="https://source.unsplash.com/600x400/?architecture,modern" alt="Architecture">
+        <p>Architecture</p>
+      </div>
+      <!-- Immagine 4 da Unsplash -->
+      <div class="grid-item">
+        <img src="https://source.unsplash.com/600x400/?landscape,mountains" alt="Mountains">
+        <p>Mountains</p>
+      </div>
+      <!-- Immagine 5 da Unsplash -->
+      <div class="grid-item">
+        <img src="https://source.unsplash.com/600x400/?beach,ocean" alt="Beach">
+        <p>Beach</p>
+      </div>
+      <!-- Immagine 6 da Unsplash -->
+      <div class="grid-item">
+        <img src="https://source.unsplash.com/600x400/?animals,wildlife" alt="Wildlife">
+        <p>Wildlife</p>
       </div>
     </div>
   </section>
